fixed button spacing

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -74,8 +74,8 @@ h2 {
     height:40px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
-    margin-bottom:30px;
+    margin-top: 7%;
+    margin-bottom:0px;
     background-color:#EEE;
     color:rgba(20,20,20,.7);
     font-weight: 800;
@@ -89,7 +89,7 @@ h2 {
     font-size:30px;
     margin: 5px 5px;
     padding: 0px 0px;
-    text-align:left;
+    text-align:center;
     color: #EEE;
     margin:20px;
 
